--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,19 @@ build-backend = "hatchling.build"
 
 [project]
 name = "SanauAutomationSDK"
-version = "0.0.1"
+version = "1.0.0"
 authors = [
-  { name="victor.ten", email="prostobackoffice@gmail.com" },
+    { name="victor.ten", email="prostobackoffice@gmail.com" },
+    { name="NotFakeL1eN", email="notfakel1en@gmail.com" },
+    { name="BaturinMaksim188", email="Baturinmaksim188@gmail.com"},
 ]
 description = "For now test description"
 readme = "README.md"
+dependencies = [
+    'requests',
+    'json',
+    'urllib'
+]
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Python :: 3",
