pyproject.toml fixed

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,9 @@
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["src/sanau_automation_sdk"]
+
 [project]
 name = "SanauAutomationSDK"
 version = "1.0.0"
