--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,11 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/sanau_automation_sdk"]
+packages = ["src/SanauAutomationSDK/"]
 
 [project]
 name = "SanauAutomationSDK"
-version = "1.0.0"
+version = "1.0.2"
 authors = [
     { name="victor.ten", email="prostobackoffice@gmail.com" },
     { name="NotFakeL1eN", email="notfakel1en@gmail.com" },
@@ -17,8 +17,6 @@ description = "SDK that simplifies work with outsourcing"
 readme = "README.md"
 dependencies = [
     'requests',
-    'json',
-    'urllib'
 ]
 requires-python = ">=3.8"
 classifiers = [
