--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ packages = ["src/SanauAutomationSDK/"]
 
 [project]
 name = "SanauAutomationSDK"
-version = "1.0.8"
+version = "1.0.9"
 authors = [
     { name="victor.ten", email="prostobackoffice@gmail.com" },
     { name="NotFakeL1eN", email="notfakel1en@gmail.com" },
@@ -17,6 +17,7 @@ description = "SDK that simplifies work with outsourcing"
 readme = "README.md"
 dependencies = [
     'requests',
+    'peewee',
 ]
 requires-python = ">=3.8"
 classifiers = [
